# ripple1d-pipeline

./: .env  .gitignore  README.md  batch_ripple_pipeline.py  config.env  config.example.yaml  debug.ipynb  design_guide.md  example.env  monitoring.py  monitoring_database.py  pixi.toml  process.ipynb  process_new.ipynb  process_old.ipynb  pyproject.toml  qc.ipynb  qc_new.ipynb  requirements.txt  ripple_pipeline.py  ripple_pipeline_new.py  s3_batch_move.py  setup.ipynb  setup_new.ipynb  setup_old.ipynb
deployment/: OWP_Deployment_Scope.md
entrypoints/: monitoring_database.py  run_batch.py  run_collection.py
entrypoints/notebooks/: process.ipynb
nomad/: collections.csv  dispatch_nomad_jobs.py  nomad_coordinator.py  old_ami_ripple_pipeline.nomad.hcl  ripple_batch_pipeline.nomad.hcl  ripple_test.nomad.hcl  test.nomad  test_ripple.nomad.hcl  test_ripple_secrets.nomad.hcl
pixi-scripts/: install_flows2fim.bat  install_flows2fim.py
ripple1d_pipeline/: __init__.py  config.py  default_config.yaml  logging_utils.py
ripple1d_pipeline/process/: base_model_step_processor.py  base_reach_step_processor.py  base_step_processor.py  bridge_processor.py  extent_library.py  ikwse_step.py  job_client.py  (+4 more)
scripts/: __init__.py  config.py  config.yaml  test_yaml.py
src/: __init__.py  config.yaml  logging_utils.py
tests/: __init__.py  test_bridge_processor.py  test_config.yaml
tools/: create_rating_curves_points.py  flow_envelope.py  generate_bridge_vrt_matrix.py  get_invalid_models_from_stac.py  list_collections.py  make_tile_index.py  s3_batch_move.py  stitch_envelope.py
(+106 files in other folders)
